--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ nav ul li a:hover {
     gap: 20px;
 }
 
+.map-container {
+    max-width: 100%;
+}
+
 /* CONTAINER */
 .container {
     max-width: 1500px;
@@ -119,6 +123,10 @@ nav ul li a:hover {
     margin: -30px;
     text-align: justify;
     color: white;
+}
+
+.map-container {
+    width: 100%;
 }
 
 /* HERO SECTION */
@@ -206,11 +214,23 @@ h3 {
     display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 800px;
+    max-width: 650px;
     flex-shrink: 0;
     border-radius: 20px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
     margin-bottom: 40px;
+}
+
+.map-container {
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+}
+
+iframe {
+    width: 70%;
+    height: 300px;
+    border: 0;
 }
 
 /* REGISTRATION BUTTON */
