--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ h3 {
     flex-shrink: 0;
     border-radius: 20px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .map-container {
@@ -254,11 +254,17 @@ iframe {
     color: #145025;
 }
 
+
 /* FOOTER */
 footer {
     text-align: center;
     padding: 20px;
-    background: #1b1f42
+    background: #1b1f42;
+}
+
+footer a {
+    color: white;
+    text-decoration: underline;
 }
 
 /* CAROUSEL */
